--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<script language="javascript">
 			document.write("<h1 align=center></h1>");
 			alert("Cảnh báo!");
-			a = confirm("Bạn hãy ấn Ok để tiếp tục!")?"Ấn vào link bên dưới đi nào":"Reload lại trang và ấn Ok đi :)";
+			a = confirm("Bạn hãy ấn Ok để tiếp tục!")?"Ấn vào link bên dưới và cho max volume đi nào":"Reload lại trang và ấn Ok đi :)";
 			document.write("<h1 align=center>" + a + "</h1>")
 			</script>	
 			<a class="just-a" href="https://www.youtube.com/watch?v=Wu8NeFXaoOc"> I am here click me</a>		
